composer.json update authoritative name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jasper/phpalias",
+    "name": "jasperalani/phpalias",
     "description": "Shorthand aliases for php functions",
     "type": "project",
     "license": "MIT",
